style: fix autofill input background in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 1000px #232323 inset !important;
+  -webkit-text-fill-color: white !important;
+  caret-color: white;
+}
+
+
+.dark input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 1000px #232323 inset !important;
+  -webkit-text-fill-color: white !important;
+}
+
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+  transition: background-color 9999s ease-in-out 0s;
+}
